--- a/FrontendNew/src/app/forgot-password/forgot-password.component.html
+++ b/FrontendNew/src/app/forgot-password/forgot-password.component.html
@@ -1,1 +1,28 @@
-<p>forgot-password works!</p>
+<div class="div1">
+    <form>
+      <div class="div2" align="center">Forgot Password
+        <!-- <textarea style="text-align: center;font-weight: bold;"  class="t1" rows="1" cols="50">Forgot Password</textarea><br><br><br> -->
+      </div><br>
+      <div align="center">
+      	<textarea  class="t2" rows="1" cols="100">Enter Details</textarea><br><br><br>
+      </div>
+      
+      
+      
+      <div class="div3" align="center">
+        
+        <p>Enter User Id    -    <input type="text"  name="accno" required><br><br></p>
+        
+        <p>OTP     -    <input type="number"  name="otp" required><br><br><br><br></p>
+      </div>
+      <div align="center">
+      <!-- link button--<button type="submit" style="font-weight: bolder;"><a routerLink="set-pass">Proceed</a></button> -->
+      <button type="submit" style="font-weight: bolder;">Proceed</button>
+      <button type="reset" style="font-weight: bolder;">Back</button>
+      
+
+      </div>
+       
+     
+    </form>
+  </div>
