--- a/FrontendNew/src/app/forgot-user-id/forgot-user-id.component.html
+++ b/FrontendNew/src/app/forgot-user-id/forgot-user-id.component.html
@@ -1,1 +1,27 @@
-<p>forgot-user-id works!</p>
+<div class="div1">
+    <form>
+      <div class="div2" align="center">Forgot User Id
+        <!-- <textarea style="text-align: center;font-weight: bold;"  class="t1" rows="1" cols="50">Forgot Password</textarea><br><br><br> -->
+      </div><br>
+      <div align="center">
+      	<textarea  class="t2" rows="1" cols="100">Enter Details</textarea><br><br><br>
+      </div>
+      
+      
+      
+      <div class="div3" align="center">
+        
+        <p>Enter Account Number    -    <input type="text"  name="accno" required><br><br></p>
+        
+        <p>OTP     -    <input type="number"  name="otp" required><br><br><br><br></p>
+      </div>
+      <div align="center">
+      <button type="submit" style="font-weight: bolder;">Proceed</button>
+      <button type="reset" style="font-weight: bolder;">Back</button>
+      
+
+      </div>
+       
+     
+    </form>
+  </div>
