--- a/FrontendNew/src/app/login-page/login-page.component.html
+++ b/FrontendNew/src/app/login-page/login-page.component.html
@@ -1,1 +1,20 @@
-<p>login-page works!</p>
+<div>
+    <form>
+        <div class="div1" align="center">
+            Login to your account
+        </div><br>
+        <div class="div2" align="center">
+            <p>User Id    -    <input align="center" type="text"  name="accno" required><br><br></p>
+            <p>Password     -    <input align="center" type="number"  name="otp" required><br><br></p>
+        </div>
+        <div align="center">
+            <button id="b1" type="submit">Login</button><br><br>
+        </div>
+        <div align="center">
+            <p style="font-style: italic;">First time user? Register</p>
+            <p style="font-style: italic;">Forgot User Id?</p>
+            <p style="font-style: italic;">Forgot Password?</p>
+        </div>
+
+    </form>
+</div>
