--- a/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.html
+++ b/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.html
@@ -1,1 +1,22 @@
-<p>netbanking-registration works!</p>
+<div class="div" align="center">
+
+ <form>
+    
+    <div class="div1" align="center">Register for Internet Banking
+        <!-- <textarea class="t1" rows="1" cols="30">Register for Internet Banking</textarea><br><br><br> -->
+
+    </div><br><br>
+    <div class="div2" align="center">
+        <p>Account Number    -   <input type="text"  name="uid" required><br><br></p>
+        <p>Set Login Password     -    <input type="text"  name="pass" required><br><br></p>
+        <p>Confirm Login Password     -    <input type="password"  name="pass" required><br><br></p>
+        <p>Set Transaction Password     -    <input type="text"  name="pass" required><br><br></p>
+        <p> Transaction Password     -    <input type="password"  name="pass" required><br><br></p>
+        <p>Enter OTP     -    <input type="number"  name="pass" required><br><br></p>
+    </div>
+    <div align="center">
+     <button id="b1" type="submit" style="font-weight: bold;">Submit</button><br><br>
+    </div>
+    
+</form>
+</div>
