user register committed

--- a/FrontendNew/src/app/login-page/login-page.component.html
+++ b/FrontendNew/src/app/login-page/login-page.component.html
@@ -32,9 +32,9 @@
                 </div>
                 <br />
                 <div align="center">
-                    <p style="font-style: italic;font-weight: bolder;">First time user? Register</p>
-                    <p style="font-style: italic;font-weight: bolder;">Forgot User Id?</p>
-                    <p style="font-style: italic;font-weight: bolder;">Forgot Password?</p>
+                   <a routerLink="/register" > <p style="font-style: italic;font-weight: bolder;">First time user? Register</p></a>
+                   <a routerLink="/forgotId" > <p style="font-style: italic;font-weight: bolder;">Forgot User Id?</p></a>
+                   <a routerLink="/forgotPass"> <p style="font-style: italic;font-weight: bolder;">Forgot Password?</p></a>
                 </div>
             </div>
 
