--- a/FrontendNew/src/app/home-page/home-page.component.html
+++ b/FrontendNew/src/app/home-page/home-page.component.html
@@ -1,1 +1,27 @@
-<p>home-page works!</p>
+<html>
+
+<head>
+    <title>Home Page</title>
+</head>
+
+<body>
+    <div id="container">
+        <div id="image">
+            <img src="lti_bank.jpg">
+        </div>
+        <!-- <div id="sc"> -->
+            <div id="user" align="right">New User?<br><br>
+                <button type="submit">Register</button><br>
+                <button type="submit">Check Status</button>
+
+            </div><br>
+            <div id="customer" align="right">Existing Customer?<br><br>
+                <button type="submit">Login</button><br>
+                <button type="submit">Register For Net Banking</button>
+
+            </div>
+        <!-- </div> -->
+    </div>
+</body>
+
+</html>
