--- a/FrontendNew/src/app/registration-page/registration-page.component.html
+++ b/FrontendNew/src/app/registration-page/registration-page.component.html
@@ -1,1 +1,83 @@
-<p>registration-page works!</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>registration-page</title>
+    <style>
+        .lable{
+            text-align: center; ;
+        }
+    </style>
+</head>
+<body>
+    <center><h1 style="border-style:solid">OPEN A SAVINGS ACCOUNT</h1></center>
+    <center><h2 style="border-style:solid">PERSONAL DETAILS</h2></center>
+    <div class=lable>
+    <label>Title</label>
+    <select>
+        <option value="Title">Title</option>
+        <option value="Mr.">Mr.</option>
+        <option value="Mrs.">Mrs.</option>
+        <option value="Miss.">Miss.</option>
+    </select>
+    <br>
+    <br>
+
+    <label>First Name</label>
+    <input type="text" name="firstname" size="20"/> <br> <br>
+    <label>Last Name</label>
+    <input type="text" name="lastname" size="20"/> <br> <br>
+    <label>Middle Name</label>
+    <input type="text" name="middlename" size="20"/> <br> <br>
+    <label>Father's Name</label>
+    <input type="text" name="fathername" size="20"/> <br> <br>
+    <label>Mobile Number</label>
+    <input type="text" name="mobilenumber" size="10"/> <br> <br>
+    <label>Email ID</label>
+    <input type="text" name="EmailID" size="20"/> <br> <br>
+    <label>Aadhar Card Number</label>
+    <input type="text" name="AadharCardNumber" size="20"/> <br> <br>
+    <label>Date of Birth</label>
+    <input type="text" name="dob" size="20"/> <br> <br>
+    
+    <h4>Residential Address</h4>
+    <label>a) Address Line 1:</label>
+    <input type="text" name="add1" size="20"/> <br> <br>
+    <label>b) Address Line 2:</label>
+    <input type="text" name="add2" size="20"/> <br> <br>
+    <label>c) Landmark </label>
+    <input type="text" name="landmark" size="20"/> <br> <br>
+    <label>d) State</label>
+    <input type="text" name="state" size="20"/> <br> <br>
+    <label>e) City</label>
+    <input type="text" name="city" size="20"/> <br> <br>
+    <label>f) Pincode</label>
+    <input type="text" name="pincode" size="20"/> <br> <br>
+
+    <h4>Occupation Details</h4>
+    <label>a) Occupation Type</label>
+    <input type="text" name="occupation" size="20"/> <br> <br>
+    <label>b)Source Of Income</label>
+    <input type="text" name="incomesource" size="20"/> <br> <br>
+    <label>c)Gross Annual Income</label>
+    <select>
+        <option value="Gross Annual Income">Gross Annual Income</option>
+        <option value=">100000">>100000</option>
+        <option value="100000-500000">100000-500000</option>
+        <option value="Above 500000">Above 500000</option>
+        <option value="Above 1000000">Above 1000000</option>
+    </select>
+    <br><br>
+
+    <h4>Debit/ATM Card</h4>
+    <input type="checkbox" value="Opt for Net Banking">
+    <label>Opt for Net Banking</label><br> <br>
+    <input type="checkbox" value="I agree with the terms and conditions">
+    <label>I agree with the terms and conditions</label><br> <br>
+
+    <input type="submit" value="Submit">
+</div>
+
+</body>
+</html>
