--- a/FrontendNew/src/app/app.component.html
+++ b/FrontendNew/src/app/app.component.html
@@ -13,6 +13,6 @@
 <!-- <app-admin-login></app-admin-login> -->
 <!-- <app-home-page></app-home-page> -->
 
-
+<app-registration-page></app-registration-page>
 <!-- <router-outlet></router-outlet> -->
 
