--- a/FrontendNew/src/app/check-status/check-status.component.html
+++ b/FrontendNew/src/app/check-status/check-status.component.html
@@ -11,7 +11,7 @@
         <div style="padding: 100px 0 0 250px;">
             <div id="login-box">
 
-                <h2 align="center">Status</h2>
+                <h2 align="center">Track Status</h2>
 
                 <br />
                 <br />
