--- a/FrontendNew/src/app/forgot-user-id/forgot-user-id.component.html
+++ b/FrontendNew/src/app/forgot-user-id/forgot-user-id.component.html
@@ -15,11 +15,11 @@
 
                 <br />
                 <br />
-                <div id="login-box-name" style="margin-top:20px;">Account Number:</div>
+                <div id="login-box-name" style="margin-top:20px;"><b>Account Number:</b></div>
                 <div id="login-box-field" style="margin-top:20px;">
                     <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
                 </div>
-                <div id="login-box-name">OTP:</div>
+                <div id="login-box-name"><b>OTP:</b></div>
                 <div id="login-box-field">
                     <input name="q" type="password" class="form-login" title="Password" value="" size="30"
                         maxlength="2048" />
@@ -28,14 +28,12 @@
                 <br />
                 <br />
                 <div align="center">
-                    <button id="login-button" type="submit" value="Log In">Proceed</button>
-                    <button id="login-button" type="submit" value="Log In">Back</button>
+                    <button id="login-button"  value="Log In">Back</button>
+                    <button id="login-button"  value="Log In">Proceed</button>
+                    
                 </div>
-                
-                  
 
-                
-            
+
             </div>
 
         </div>
