--- a/FrontendNew/src/app/login-page/login-page.component.html
+++ b/FrontendNew/src/app/login-page/login-page.component.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-    <form action="loginAdmin" method="post">
+    <form action="userDashboard" method="post">
         <div style="padding: 100px 0 0 250px;">
             <div id="login-box">
 
@@ -28,7 +28,7 @@
                 <br />
                 <br />
                 <div align="center">
-                    <button id="login-button" type="submit" value="Log In">Login</button>
+                    <button id="login-button" type="submit" value="Log In" (click)="userDashboard()">Login</button>
                 </div>
                 <br />
                 <div align="center">
