--- a/FrontendNew/src/app/forgot-password/forgot-password.component.html
+++ b/FrontendNew/src/app/forgot-password/forgot-password.component.html
@@ -15,11 +15,11 @@
 
                 <br />
                 <br />
-                <div id="login-box-name" style="margin-top:20px;">User Id:</div>
+                <div id="login-box-name" style="margin-top:20px;"><b>User Id:</b></div>
                 <div id="login-box-field" style="margin-top:20px;">
                     <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
                 </div>
-                <div id="login-box-name">OTP:</div>
+                <div id="login-box-name"><b>OTP:</b></div>
                 <div id="login-box-field">
                     <input name="q" type="password" class="form-login" title="Password" value="" size="30"
                         maxlength="2048" />
@@ -28,8 +28,9 @@
                 <br />
                 <br />
                 <div align="center">
-                    <button id="login-button" type="submit" value="Log In">Proceed</button>
                     <button id="login-button" type="submit" value="Log In">Back</button>
+                    <button id="login-button" type="submit" value="Log In">Proceed</button>
+                    
                 </div>
                 
                   
