--- a/FrontendNew/src/app/forgot-user-id/forgot-user-id.component.css
+++ b/FrontendNew/src/app/forgot-user-id/forgot-user-id.component.css
@@ -1,20 +1,22 @@
 #login-button {
-    margin-top:25px;
-    margin-right: 16px;
+    margin-top: 35px;
+    margin-right: 56px;
+    margin-left: 25px;
     padding: 7px ;
     border: 1px solid #0d2c52;
     background-color:#1e4f8a;
     color:#ffffff;
+    
     }
     
     #login-box {
         
-        width:320px;
+        width:370px;
         height: 333px;
         padding: 58px 76px 0px 76px;
         color: #ebebeb;
         font: 12px Arial, Helvetica, sans-serif;
-        margin-left:150px;
+        margin-left:250px;
         border: black;
         border-width:6px;
         border-style:solid;
@@ -31,9 +33,9 @@
     #login-box-name {
     float: left;
     display:inline;
-    width:80px;
+    width:100px;
     color:#000000;
-    text-align: right;
+    text-align: rleft;
     font:bold;
     font-size:11px;
     padding: 14px 20px 0 0;
@@ -43,7 +45,7 @@
     #login-box-field {
     float: left;
     display:inline;
-    width:180px;
+    width:150px;
     margin:0;
     margin:0 0 7px 0;
     }
@@ -57,8 +59,3 @@
     font-size: 16px;
     color: #ffffff;
     }
-    
-    
-    
-    
-    
