--- a/FrontendNew/src/app/home-page/home-page.component.css
+++ b/FrontendNew/src/app/home-page/home-page.component.css
@@ -1,22 +1,39 @@
-#container{
-    width:900px;
-    height: 540px;
-    padding: 60px 76px 0px 100px;
-    /* color: #ebebeb; */
-    font: 20px Arial, Helvetica, sans-serif;
-    margin-left:120px;
-    border: black;
-    border-width:6px;
-    border-style:solid;
-    display: inline-table;
-}
-#image{
-    width: 350px;
-    height: 400px;
-    border: black;
-    border-width:6px;
-    border-style:solid;
 
+#container{
+    display:inline-flex;
+    height: 650px;
+    padding: 60px 76px 0px 100px;
+    font: 20px Arial, Helvetica, sans-serif;
+    margin-left:200px;
+	margin-top:60px;
+	margin-bottom:100px;
+    border: black;
+    border-width:6px;
+    border-style:solid;
+   background-image: url("/assets/images/lti_banking2.jpg");
+   background-repeat:no-repeat;
+   background-size:1105px 710px;
+   border-radius:15px;
+}
+
+
+#admin{
+    width: 300px;
+    height: 170px;
+    border: black;
+    border-width:6px;
+    border-style:double;
+    border-radius:15px;
+	background-color:rgba(65, 70, 140,0.5);
+}
+p {
+	color:white;
+	text-align:center;
+}
+button {
+	background-color:#1e4f8a;
+	font-size:15px;
+	color:white;
 }
 
 
@@ -24,40 +41,28 @@
     width: 250px;
     height: 160px;
     text-align: center;
-    margin-left:400px;
-    margin-right: 100px;
+    margin-left:250px;
     margin-top: 0px;
-    margin-bottom: 50px;
     border: black;
     border-width:6px;
-    border-style:solid;
-    float: right;
+    border-style:double;
     padding: 30px 40px 20px 10px; 
-     
+    color:white; 
+    border-radius:15px;
+	background-color:rgba(65, 70, 140,0.5);
+}
 
-}
-#reg-sta{
-    border: black;
-    border-width:4px;
-    border-style:solid;
-   
-}
 #customer{
     width: 250px;
     height: 160px;
     text-align: center;
-    margin-left:400px;
-    margin-top: 10px;
-    border: black;
+    margin-left:250px;
+    margin-top: 60px;
+    border:  black;
     border-width:6px;
-    border-style:solid;
-    float: right;
+    border-style:double;  
     padding: 30px 40px 0 10px;
-
-}
-#log-net{
-   
-    border: black;
-    border-width:4px;
-    border-style:solid;
+    color:white;
+	border-radius:15px;
+	background-color:rgba(65, 70, 140,0.5);
 }
