--- a/FrontendNew/src/app/set-new-password/set-new-password.component.html
+++ b/FrontendNew/src/app/set-new-password/set-new-password.component.html
@@ -1,14 +1,27 @@
-<div class="div1" align="center">
-    <form>
-        <div class="div2" align="center">
-            Set New Password
+<form action="loginAdmin" method="post">
+    <div style="padding: 100px 0 0 250px;">
+        <div id="login-box">
+
+            <h2 align="center">Set New Password</h2>
+
+            <br />
+            <br />
+            <div id="login-box-name" style="margin-top:20px;">Login Password:</div>
+            <div id="login-box-field" style="margin-top:20px;">
+                <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
+            </div>
+            <div id="login-box-name">Confirm Password:</div>
+            <div id="login-box-field">
+                <input name="q" type="password" class="form-login" title="Password" value="" size="30"
+                    maxlength="2048" />
+            </div>
+            <br />
+            <br />
+            <br />
+            <div align="center">
+                <button id="login-button" type="submit" value="Submit">Submit</button>
+            </div>
         </div>
-        <div class="div3" align="center">
-            <p>Login Password    -    <input type="text"  name="lgnpass" required><br><br></p>
-            <p>Confirm Password    -    <input type="password"  name="accno" required><br><br></p>
-        </div>
-        <div class="div4" align="center">
-            <button type="submit" style="font-weight: bolder;font-size: xx-large;">Submit</button>
-        </div>
-    </form>
-</div>
+
+    </div>
+</form>
