--- a/FrontendNew/src/app/check-status/check-status.component.html
+++ b/FrontendNew/src/app/check-status/check-status.component.html
@@ -1,1 +1,27 @@
-<p>check-status works!</p>
+<form action="loginAdmin" method="post">
+    <div style="padding: 100px 0 0 250px;">
+        <div id="login-box">
+
+            <h2 align="center">Status</h2>
+
+            <br />
+            <br />
+            <div id="login-box-name" style="margin-top:20px;">Refrence Id:</div>
+            <div id="login-box-field" style="margin-top:20px;">
+                <input name="q" class="form-login" title="Username" value="" size="10" maxlength="2048" />
+            </div>
+            <!-- <div id="login-box-name">Password:</div>
+            <div id="login-box-field">
+                <input name="q" type="password" class="form-login" title="Password" value="" size="30"
+                    maxlength="2048" />
+            </div> -->
+            <br />
+            <br />
+            <br />
+            <div align="center">
+                <button id="login-button" type="submit" value="Log In">Check Status</button>
+            </div>
+        </div>
+
+    </div>
+</form>
