--- a/FrontendNew/src/app/forgot-user-id/forgot-user-id.component.html
+++ b/FrontendNew/src/app/forgot-user-id/forgot-user-id.component.html
@@ -1,27 +1,33 @@
-<div class="div1">
-    <form>
-      <div class="div2" align="center">Forgot User Id
-        <!-- <textarea style="text-align: center;font-weight: bold;"  class="t1" rows="1" cols="50">Forgot Password</textarea><br><br><br> -->
-      </div><br>
-      <div align="center">
-      	<textarea  class="t2" rows="1" cols="100">Enter Details</textarea><br><br><br>
-      </div>
-      
-      
-      
-      <div class="div3" align="center">
-        
-        <p>Enter Account Number    -    <input type="text"  name="accno" required><br><br></p>
-        
-        <p>OTP     -    <input type="number"  name="otp" required><br><br><br><br></p>
-      </div>
-      <div align="center">
-      <button type="submit" style="font-weight: bolder;">Proceed</button>
-      <button type="reset" style="font-weight: bolder;">Back</button>
-      
+<form action="loginAdmin" method="post">
+  <div style="padding: 100px 0 0 250px;">
+      <div id="login-box">
 
+          <h2 align="center">Forgot User Id</h2>
+
+          <br />
+          <br />
+          <div id="login-box-name" style="margin-top:20px;">Account Number:</div>
+          <div id="login-box-field" style="margin-top:20px;">
+              <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
+          </div>
+          <div id="login-box-name">OTP:</div>
+          <div id="login-box-field">
+              <input name="q" type="password" class="form-login" title="Password" value="" size="30"
+                  maxlength="2048" />
+          </div>
+          <br />
+          <br />
+          <br />
+          <div align="center">
+              <button id="login-button" type="submit" value="Log In">Proceed</button>
+              <button id="login-button" type="submit" value="Log In">Back</button>
+          </div>
+          
+            
+
+          
+      
       </div>
-       
-     
-    </form>
+
   </div>
+</form>
