--- a/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.html
+++ b/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.html
@@ -1,22 +1,54 @@
-<div class="div" align="center">
+<form action="loginAdmin" method="post">
+    <div style="padding: 55px 0 0 250px;">
+        <div id="login-box">
 
- <form>
-    
-    <div class="div1" align="center">Register for Internet Banking
-        <!-- <textarea class="t1" rows="1" cols="30">Register for Internet Banking</textarea><br><br><br> -->
+            <h2 align="center">Net Banking Registration</h2>
 
-    </div><br><br>
-    <div class="div2" align="center">
-        <p>Account Number    -   <input type="text"  name="uid" required><br><br></p>
-        <p>Set Login Password     -    <input type="text"  name="pass" required><br><br></p>
-        <p>Confirm Login Password     -    <input type="password"  name="pass" required><br><br></p>
-        <p>Set Transaction Password     -    <input type="text"  name="pass" required><br><br></p>
-        <p> Transaction Password     -    <input type="password"  name="pass" required><br><br></p>
-        <p>Enter OTP     -    <input type="number"  name="pass" required><br><br></p>
+            <br />
+            <br />
+            <div id="login-box-name" style="margin-top:20px;">Account Number:</div>
+            <div id="login-box-field" style="margin-top:20px;">
+                <input name="q" class="form-login" title="Username" value="" size="30" maxlength="2048" />
+            </div>
+            <div id="login-box-name">Set Login Password:</div>
+            <div id="login-box-field">
+                <input name="q" type="text" class="form-login" title="Password" value="" size="30"
+                    maxlength="2048" />
+            </div>
+            <div id="login-box-name">Confirm Login Password:</div>
+            <div id="login-box-field">
+                <input name="q" type="password" class="form-login" title="Password" value="" size="30"
+                    maxlength="2048" />
+            </div>
+            <div id="login-box-name">Set Transaction Password:</div>
+            <div id="login-box-field">
+                <input name="q" type="text" class="form-login" title="Password" value="" size="30"
+                    maxlength="2048" />
+
+            </div>
+            <div id="login-box-name">Confirm Transaction Password:</div>
+            <div id="login-box-field">
+                <input name="q" type="password" class="form-login" title="Password" value="" size="30"
+                    maxlength="2048" />
+
+            </div>
+            <div align="center">
+                <button id="b1" type="submit" value="Log In">Request OTP</button>
+            </div> <br>
+            <div id="login-box-name">OTP:</div>
+            <div id="login-box-field">
+                <input name="q" type="number" class="form-login" title="Password" value="" size="10"
+                    maxlength="2048" />
+
+            </div>
+
+            <br />
+            <br />
+            <br />
+            <div align="center">
+                <button id="login-button" type="submit" value="Log In">Submit</button>
+            </div>
+        </div>
+
     </div>
-    <div align="center">
-     <button id="b1" type="submit" style="font-weight: bold;">Submit</button><br><br>
-    </div>
-    
 </form>
-</div>
