--- a/FrontendNew/src/app/set-new-password/set-new-password.component.css
+++ b/FrontendNew/src/app/set-new-password/set-new-password.component.css
@@ -8,12 +8,11 @@
     
     #login-box {
         
-        width:320px;
-        height: 333px;
-        padding: 58px 76px 0px 76px;
+        width:350px;
+        height: 400px;
+        padding: 60px 76px 0px 100px;
         color: #ebebeb;
-        font: 12px Arial, Helvetica, sans-serif;
-        margin-left:150px;
+        font: 20px Arial, Helvetica, sans-serif;
         border: black;
         border-width:6px;
         border-style:solid;
@@ -23,7 +22,7 @@
     padding:0;
     margin:0;
     color: #000000;
-    font: bold 35px "Calibri", Arial;
+    font: bold 30px "Calibri", Arial;
     }
     
     
@@ -34,9 +33,8 @@
     color:#000000;
     text-align: right;
     font:bold;
-    font-size:10px;
-    padding: 14px 10px 0 0;
-    margin:0 0 7px 0;
+    font-size:12px;
+    padding-top: 5px;
     }
     
     #login-box-field {
@@ -44,20 +42,22 @@
     display:inline;
     width:230px;
     margin:0;
-    margin:0 0 7px 0;
+    margin-bottom: 10px;
     }
     
     
     .form-login {
-    width: 205px;
-    padding: 10px 4px 6px 3px;
+    width: 165px;
+    padding: 10px 7px 6px 50px;
     border: 1px solid #0d2c52;
     background-color:#1e4f8a;
-    font-size: 16px;
+    font-size: 13px;
     color: #ffffff;
-
     }
-    
+    #b1{
+        margin-top:10px;
+        padding: 2px ;
+    }
     
     
     
