--- a/FrontendNew/src/app/set-new-password/set-new-password.component.html
+++ b/FrontendNew/src/app/set-new-password/set-new-password.component.html
@@ -1,6 +1,6 @@
 
 <form action="loginAdmin" method="post">
-    <div style="padding: 100px 0 0 250px;">
+    <div style="padding: 55px 0 100px 0;" align="center">
         <div id="login-box">
 
             <h2 align="center">Set New Password</h2>
