--- a/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.html
+++ b/FrontendNew/src/app/netbanking-registration/netbanking-registration.component.html
@@ -1,5 +1,5 @@
 <form action="loginAdmin" method="post">
-    <div style="padding: 55px 0 0 250px;">
+    <div style="padding: 55px 0 100px 0;" align="center">
         <div id="login-box">
 
             <h2 align="center">Net Banking Registration</h2>
@@ -24,7 +24,6 @@
             <div id="login-box-field">
                 <input name="q" type="text" class="form-login" title="Password" value="" size="30"
                     maxlength="2048" />
-
             </div>
             <div id="login-box-name">Confirm Transaction Password:</div>
             <div id="login-box-field">
@@ -32,15 +31,7 @@
                     maxlength="2048" />
 
             </div>
-            <div align="center">
-                <button id="b1" type="submit" value="Log In">Request OTP</button>
-            </div> <br>
-            <div id="login-box-name">OTP:</div>
-            <div id="login-box-field">
-                <input name="q" type="number" class="form-login" title="Password" value="" size="10"
-                    maxlength="2048" />
-
-            </div>
+            
 
             <br />
             <br />
